add edited html file

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <td>
         <h1>Lindsay Essoyan</h1>
         <p><em>Student at the University of California, Los Angeles</em></p>
-        <p>Hi! I'm Lulu and I am a third year Cognitive Science student at UCLA. I am passionate about entrepreneurship and innovation. I desire a career that lies at the intersection of techonology and business and am working to further my data
+        <p>Hi! I'm Lulu, and I am a third year Cognitive Science student at UCLA. I am passionate about entrepreneurship and innovation. I desire a career that lies at the intersection of techonology and business and am working to further my data
           analysis
           and computer programming
           skills. I love the beach, coffee, and the color yellow.</p>
@@ -27,7 +27,7 @@
   <ul>
     <li>UCLA</li>
     <ul>
-      <li>Cognitive Science Major</li>
+      <li>Pursuing a B.S. in Cognitive Science</li>
       <li><strong>Relevant Coursework:</strong> Introduction to Cognitive Science, Psychological Statistics, Introduction to Programming, Logic, Differential and Integral Calculus, Integration and Infinite Series, Principles of Java Language with
         Applications, Research Methods in Psychology, Cognitive Psychology, MATLAB Programming for Behavioral Sciences</li>
     </ul>
@@ -61,6 +61,7 @@
     <li>2018 and 2019 Los Angeles <strong><a
           href="https://scontent.fsac1-2.fna.fbcdn.net/v/t1.0-9/56419495_2337288079624916_8168451081668395008_n.jpg?_nc_cat=110&_nc_sid=110474&_nc_ohc=K5VOiHiuJd4AX8756OF&_nc_ht=scontent.fsac1-2.fna&oh=7b4a8b5ac7b1c996c029b41722628b55&oe=5E9E22E6">Walk
           For Wishes</a></strong> Participant</li>
+    <li>Indoor and Outdoor Intramural Volleyball Participant during the 2017-2018 UCLA academic year</li>
   </ul>
   <hr size="3">
   <h3>Skills</h3>
@@ -72,7 +73,7 @@
   <h3>Some of my favorite things..</h3>
   <ul>
     <li>Thrift Shopping</li>
-    <li>Cats</li>
+    <li>Salt & Straw</li>
     <li>Any book by Mitch Albom</li>
     <li>Peaky Blinders</li>
     <li>Conspiracy theories</li>
