--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="utf-8">
   <title>Lindsay's Personal Site</title>
+
 </head>
+
 
 <body>
   <table cellspacing="20">
@@ -13,7 +15,7 @@
       <td>
         <h1>Lindsay Essoyan</h1>
         <p><em>Student at the University of California, Los Angeles</em></p>
-        <p>Hi! I'm Lulu, and I am a third year Cognitive Science student at UCLA. I am passionate about entrepreneurship and innovation. I desire a career that lies at the intersection of techonology and business and am working to further my data
+        <p>Hi! I'm Lulu, and I am a fourth year Cognitive Science student at UCLA. I am passionate about entrepreneurship and innovation. I desire a career that lies at the intersection of technology and business and am working to further my data
           analysis
           and computer programming
           skills. I love the beach, coffee, and the color yellow.</p>
@@ -28,8 +30,9 @@
     <li>UCLA</li>
     <ul>
       <li>Pursuing a B.S. in Cognitive Science</li>
-      <li><strong>Relevant Coursework:</strong> Introduction to Cognitive Science, Psychological Statistics, Introduction to Programming, Logic, Differential and Integral Calculus, Integration and Infinite Series, Principles of Java Language with
-        Applications, Research Methods in Psychology, Cognitive Psychology, MATLAB Programming for Behavioral Sciences</li>
+      <li><strong>Relevant Coursework:</strong> Introduction to Cognitive Science, Psychological Statistics, Principles of Behavioral Neuroscience, Introduction to Programming, Logic, Principles of Java Language with Applications, Research Methods in
+        Psychology, Cognitive Psychology, MATLAB Programming for Behavioral Sciences, Computational Theory of Mind, Fundamentals of User Experience
+      </li>
     </ul>
     <li>St. Mary's High School</li>
     <ul>
@@ -41,13 +44,16 @@
   <ul>
     <li>Current:</li>
     <ul>
-      <li>Front End Software Development Intern at <strong><a href="https://nextbestshop.com/">NextBest A.I., Inc.</a></strong></li>
-      <li>Manager of the Tech Committee of <strong><a href="http://bruinwib.com/">Bruin Women in Business</a></strong>.</em></li>
+
+      <li>Manager of the Tech Committee of <strong><a href="http://bruinwib.com/">Bruin Women in Business</a></strong></li>
     </ul>
     <li>Past:</li>
     <ul>
+      <li>Infrastructure Reliability Analyst at <strong><a href="https://www.gilead.com/">Gilead Sciences, Inc.</a></strong>
+      </li>
+      <li>Front End Software Development Intern at <strong><a href="https://nextbestshop.com/">NextBest A.I., Inc.</a></strong></li>
       <li>Summer Intern at <strong><a href="https://www.kniferiver.com/">Knife River Construction</a></strong></li>
-      <li>Private Tour Guide on UCLA's campus through <strong><a href="https://www.campussherpa.com/">Campus Sherpa</a></strong></li>
+
       <li>Assistant Coach of <strong><a href="https://www.saintmaryshighschool.org/apps/pages/index.jsp?uREC_ID=1607152&type=d&pREC_ID=1736876">St. Mary's High School's</a></strong> 2017-2018 Junior Varsity Volleyball Team</li>
     </ul>
   </ul>
@@ -55,18 +61,17 @@
   <h3>Community Involvement</h3>
   <ul>
     <li>Mental Health Outreach Volunteer for Kappa Alpha Theta's Sisters Supporting Sisters</li>
-    <li>Participant in UCLA's 2018 <strong><a
-          href="https://scontent.fsac1-2.fna.fbcdn.net/v/t1.0-9/p720x720/36425025_1839510489439940_3179396703899877376_o.jpg?_nc_cat=109&_nc_sid=e007fa&_nc_ohc=sKj6ZL-wJvcAX83Wkc3&_nc_ht=scontent.fsac1-2.fna&_nc_tp=6&oh=5f65dcdaf1f97dd431e52015f1a1bab8&oe=5E9E2FC6">Dance
-          Marathon</a></strong></li>
-    <li>2018 and 2019 Los Angeles <strong><a
-          href="https://scontent.fsac1-2.fna.fbcdn.net/v/t1.0-9/56419495_2337288079624916_8168451081668395008_n.jpg?_nc_cat=110&_nc_sid=110474&_nc_ohc=K5VOiHiuJd4AX8756OF&_nc_ht=scontent.fsac1-2.fna&oh=7b4a8b5ac7b1c996c029b41722628b55&oe=5E9E22E6">Walk
-          For Wishes</a></strong> Participant</li>
+    <li>Private Tour Guide on UCLA's campus through <strong><a href="https://www.campussherpa.com/">Campus Sherpa</a></strong></li>
+    <li>Participant in UCLA's 2018 Dance
+      Marathon</li>
+    <li>2018 and 2019 Los Angeles Walk
+      For Wishes Participant</li>
     <li>Indoor and Outdoor Intramural Volleyball Participant during the 2017-2018 UCLA academic year</li>
   </ul>
   <hr size="3">
   <h3>Skills</h3>
   <ul>
-    <li><strong>Technical:</strong> C++, Java, R, MATLAB, HTML, CSS, JavaScript, AGTEK, Microsoft Office</li>
+    <li><strong>Technical:</strong> Basic C++, Java, R, MATLAB, HTML, CSS, JavaScript, AGTEK, Microsoft Office, Tableau</li>
     <li>Problem-Solving, Communication, Organization, Leadership</li>
   </ul>
   <hr size="3">
@@ -76,7 +81,6 @@
     <li>Salt & Straw</li>
     <li>Any book by Mitch Albom</li>
     <li>Peaky Blinders</li>
-    <li>Conspiracy theories</li>
   </ul>
   <hr size="3">
   <h3>Contact me!</h3>
